--- a/fiddle.html
+++ b/fiddle.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="#">
     <meta charset="UTF-8">
     <title>Socket.IO Fiddle</title>
   </head>
